# spacecodes

./: .gitignore  Cargo.toml  TODO  TODO.md  constants.json  run.ps1  run.sh
sc-client/: Cargo.toml
sc-client/src/: constants.rs  frag.fs  game.rs  main.rs  net.rs  noise.fs  pathfinding.rs  pbr.frag  render.rs  types.rs  ui.rs  util.rs
sc-server/: Cargo.toml
sc-server/src/: main.rs
sc-types/: Cargo.toml
sc-types/src/: constants.rs  lib.rs  shapes.rs
src/: main.rs
