[package]
name = "sc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "5.0.0", path = "../../raylib-rs/raylib" }
sc-types = { path = "../sc-types" }
serde = "1.0.197"
rmp-serde = "1.1.2"
serde_json = "1.0.115"
num-traits = "0.2.18"
crc32fast = "1.4.0"
rand_chacha = "0.3.1"
rand_core =  { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"
