[package]
name = "sc-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "5.0.0", path = "../../raylib-rs/raylib" }
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
num-traits = "0.2.18"
serde_nested_with = "0.2.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
